--- a/Backgrount Slider/style.css
+++ b/Backgrount Slider/style.css
@@ -10,6 +10,7 @@ body{
     align-items: center;
     height: 100vh;
     overflow: hidden;
+    /* this */
     background-position: center;
     background-size: cover;
     position: relative;
@@ -18,7 +19,7 @@ body{
 
 body::before{
     content: '';
-    background-color: rgba(0, 0, 0, 0.432);
+    background-color: #0000006e;
     width: 100vw;
     height: 100vh;
     position: absolute;
@@ -26,21 +27,22 @@ body::before{
     top:0;
 }
 .container{   
-    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.24),3px 0 6px rgba(0, 0, 0, 0.24);
+    box-shadow: 0 3px 6px #0000003d,3px 0 6px #0000003d;
     width: 70vw;
     height: 70vh;
     overflow: hidden;
     position: absolute;
+    border-radius: 10px;
 }
 .slider{
     position: absolute;
     left: -15vw;
-    top:-15vh;
+    top: -15vh;
     width: 100vw;
-    height:100vh;
+    height: 100vh;
+    /* this */
     background-position: center center;
     background-size: cover;
-    transition: all 0.5s ease-in-out;
 }
 
 .arrow{
@@ -53,7 +55,9 @@ body::before{
     justify-content: center;
     align-items: center;
     border-radius: 5px;
-    background-color: rgba(240, 248, 255, 0.151);
+    background-color: #f0f8ff27;
+    cursor:pointer;
+    transition: all 0.3s ease-in-out;
 }
 
 .arrow-left{
@@ -62,13 +66,13 @@ body::before{
 .arrow-right{
     right: calc(15vw - 40px);
 }
-.arrow-right:hover,.arrow-right:active{
-    background-color: rgba(240, 248, 255, 0.384);
-    box-shadow: 2px 0 4px rgba(44, 196, 14, 0.432);
+.arrow-right:hover, .arrow-right:active{
+    background-color: #f0f8ff62;
+    box-shadow: 2px 0 4px #3c3d3c6e;
 }
-.arrow-left:hover,.arrow-left:active{
-    background-color: rgba(240, 248, 255, 0.384);
-    box-shadow: -2px 0 4px rgba(44, 196, 14, 0.432);
+.arrow-left:hover, .arrow-left:active{
+    background-color: #f0f8ff62;
+    box-shadow: -2px 0 4px #3c3d3c6e;
 }
 .arrow img{
     width: 100%;
