--- a/Card Swap Transition Effects/style.css
+++ b/Card Swap Transition Effects/style.css
@@ -1,11 +1,13 @@
 body{
     background-color: #000;
+    overflow: hidden;
 }
 
 .container{
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 100vw;
     height: 100vh;
 }
 
@@ -17,79 +19,57 @@ body{
     height: 300px;
     border-radius: 10px;
     overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .card .btn{
-    position: absolute;
     width: 100%;
     height: 100px;
-    left: 0;
-    bottom:0;
     font-size: 3em;
-    background-color: rgba(32,199,129,0.4);
+    background-color: #20c78166;
     color: #fff;
+    text-decoration: none;
+    display: flex;
+    align-items:center;
+    justify-content: center;
     transition: all 0.5s linear;
 }
-.front-card .btn:hover{
-    background-color: rgba(32,199,129,0.7);
+.btn.front:hover{
+    background-color: #20c781b3;
 }
 .btn.back{
-    background-color: rgba(77,160,177,0.4);
+    background-color: #4da0b166;
 }
 .btn.back:hover{
-    background-color: rgba(77,160,177,0.7);
+    background-color: #4da0b1b3;
 }
 
 .back-card{
+    z-index: 1;
+    opacity: 0.5;
     animation-name: backcard-back;
     animation-duration: 1s;
     animation-fill-mode: forwards;
-    opacity: 0.5;
-    z-index: 1
 }
-.back-card.active{
-    animation-name: backcard-front;
-    animation-duration: 1s;
-    animation-fill-mode: forwards;
-    z-index: 2;
-}
-
 .front-card{
+    z-index: 2;
     animation-name: frontcard-front;
     animation-duration: 1s;
     animation-fill-mode: forwards;
-    z-index: 2
+}
+.back-card.active{
+    z-index: 2;
+    animation-name: backcard-front;
+    animation-duration: 1s;
+    animation-fill-mode: forwards;
 }
 .front-card.active{
+    z-index: 1;
     animation-name: frontcard-back;
     animation-duration: 1s;
     animation-fill-mode: forwards;
-    z-index: 1;
-}
-
-@keyframes frontcard-front{
-    0%{
-        transform:   translate3d(-150px, 0px, -30px);
-        opacity: 0.5;
-    }
-    50%{
-        transform:   translate3d(-350px, 0px, -30px);
-    }
-    100%{
-        transform:   translate3d(0px, 0px, 0px);
-        opacity: 1;
-    }
-}
-
-@keyframes frontcard-back{
-    0%{
-        transform: perspective(200px) translate3d(0px, 0px,0px);
-        opacity: 1;
-    }
-    100%{
-        transform: perspective(200px) translate3d(-150px,0px, -30px);
-        opacity: 1;
-    }
 }
 
 @keyframes backcard-front{
@@ -102,6 +82,30 @@ body{
     }
     100%{
         transform: perspective(200px) translate3d(0px, 0px, 0px);
+        opacity: 1;
+    }
+}
+@keyframes frontcard-back{
+    0%{
+        transform: perspective(200px) translate3d(0px, 0px,0px);
+        opacity: 1;
+    }
+    100%{
+        transform: perspective(200px) translate3d(-150px,0px, -30px);
+        opacity: .5;
+    }
+}
+
+@keyframes frontcard-front{
+    0%{
+        transform:   translate3d(-150px, 0px, -30px);
+        opacity: 0.5;
+    }
+    50%{
+        transform:   translate3d(-350px, 0px, -30px);
+    }
+    100%{
+        transform:   translate3d(0px, 0px, 0px);
         opacity: 1;
     }
 }
