--- a/Scrool animation/style.css
+++ b/Scrool animation/style.css
@@ -16,14 +16,14 @@ body{
 }
 
 .box{
-    background-color: chartreuse;
+    background-color: #5fb30b;
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 30px;
     font-style: italic;
     font-weight: 600;
-    color: rgb(81, 81, 82);
+    color: #212122;
     width: 250px;
     height: 160px;
     margin-top:20px;
