--- a/Video Background -/style.css
+++ b/Video Background -/style.css
@@ -67,17 +67,18 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: var(--overlay-color);
+    background-color: var(--overlay-color);
     mix-blend-mode: overlay;
 }
 .text{
-    position: relative;
-    z-index: 10;
+    position: absolute;
+    z-index: 9;
+    padding-right: 10px;
 }
 .text h2{
-    font-size: 5em;
+    font-size: 2em;
     font-weight: 800;
-    line-height: 1em;
+    line-height: .2em;
     text-transform: uppercase;
 }
 .text h3{
@@ -109,7 +110,7 @@
 .social{
     position: absolute;
     bottom: 20px;
-    z-index: 10;
+    z-index: 9;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -119,7 +120,6 @@
 }
 .social li a{
     display: inline-block;
-    filter: invert(1);
     margin-right: 20px;
     transform: scale(0.5);
     transition: 0.5s;
@@ -150,14 +150,18 @@
     color:var(--overlay-color);
 }
 
-@media(max-width:991px){
+@media(min-width:991px){
     .showcase, .showcase header{
         padding:40px
     }
     .text h2{
         font-size: 3em;
+        line-height: 1em;
+    }
+    .text h3{
+        font-size: 5em;
     }
     .text{
-        font-size: 2em;
+        font-size: 1.2em;
     }
 }
