--- a/Note app(drag and drop) -/style.css
+++ b/Note app(drag and drop) -/style.css
@@ -18,7 +18,8 @@
     user-select: none;
     position: absolute;
     left:20px;
-    top:50vh;
+    top:50%;
+    transform: translateY(-50%);
     z-index:100;
     background-color: #4d4c4c;
     display: flex;
