--- a/Note app(drag and drop) -/style.css
+++ b/Note app(drag and drop) -/style.css
@@ -10,8 +10,82 @@
     background-image: linear-gradient(#292a30 .1em, transparent .1em),
     linear-gradient(90deg, #292a30 .1em, transparent .1em);
     background-size: 4em 4em;
-    position: relative;
     overflow: hidden;
+    position: relative;
+}
+/* card */
+.card {
+    width: 250px;
+    color: #333333;
+    box-shadow: 0 0 10px 0 gray;
+    border-radius: 5px;
+    cursor: pointer;
+    position: fixed;
+    overflow: hidden;
+    animation-name: card-animation;
+    animation-duration: 500ms;
+    animation-fill-mode: forwards;
+    animation-timing-function: ease-in-out;
+}
+
+@keyframes card-animation {
+    0% {
+        left: -20px;
+        top: -20px;
+        opacity: .7;
+    }
+
+    30% {
+        left: 20px;
+        top: 20px;
+        opacity: .8;
+    }
+
+    70% {
+        left: 10px;
+        top: 10px;
+        opacity: .9;
+    }
+
+    100% {
+        left: 20px;
+        top: 20px;
+        opacity: 1;
+    }
+}
+
+.card .title {
+    box-shadow: 0 1px 2px 0px gray;
+    padding: 5px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 30px;
+}
+
+.card .title-content {
+    font-weight: 600;
+    padding: 0;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    width: 100%;
+    text-align: left;
+}
+
+.card .content {
+    padding: 10px;
+    text-align: justify;
+
+}
+
+.title svg {
+    fill: #333333;
+    transition: color .3s ease-in-out;
+}
+
+.title svg:hover {
+    fill: #000000;
 }
 /* menu elements */
 .menus-container{
@@ -28,7 +102,6 @@
     padding:10px;
     border-radius:50px;
 }
-
 .menus-container .add-button{
     color:#f5f0f0;
     font-weight: bold;
@@ -51,7 +124,8 @@
     border-radius:50%;
     cursor: pointer;
 }
-.menus-container .color.active, .menus-container .color:hover{
+.menus-container .color.active, 
+.menus-container .color:hover{
     box-shadow: 0 0 10px 0 #c2bdbd;
 }
 
