change to style of music player

--- a/Music Player/style.css
+++ b/Music Player/style.css
@@ -141,7 +141,7 @@ body {
 	border-radius: 50%;
 	background-color: #5DD4FC;
 	position: absolute;
-	right:0;
+	right:-8px;
 	top:-7px;
 }
 .play-icons {
